# aleph-parachain-bridge

./: Cargo.toml
.github/workflows/: test-code.yml
deployments/local-scripts/: run-aleph-parachain-millau-complex-relay.sh  run_all_aleph_parachain_millau_relays.sh
modules/aleph/: Cargo.toml
modules/aleph/src/: lib.rs  storage_types.rs
primitives/aleph-header-chain/: Cargo.toml
primitives/aleph-header-chain/src/: aleph_justification.rs  lib.rs
primitives/chain-aleph-parachain/: Cargo.toml
primitives/chain-aleph-parachain/src/: lib.rs
primitives/chain-aleph-zero/: Cargo.toml
primitives/chain-aleph-zero/src/: lib.rs
primitives/header-chain/src/: lib.rs
primitives/runtime/src/: lib.rs
relays/bin-substrate/: Cargo.toml
relays/bin-substrate/src/bridges/: mod.rs
relays/bin-substrate/src/bridges/aleph_parachain_aleph_zero/: aleph_zero_headers_to_aleph_parachain.rs  mod.rs
relays/bin-substrate/src/bridges/aleph_parachain_millau/: aleph_parachain_messages_to_millau.rs  millau_headers_to_aleph_parachain.rs  millau_messages_to_aleph_parachain.rs  mod.rs  rococo_parachains_to_millau.rs
relays/bin-substrate/src/bridges/rococo_millau/: mod.rs  rococo_headers_to_millau.rs  rococo_parachains_to_millau.rs
relays/bin-substrate/src/chains/: aleph_parachain.rs  aleph_zero.rs  mod.rs
relays/bin-substrate/src/cli/: bridge.rs  init_bridge.rs  relay_headers.rs  relay_messages.rs  relay_parachains.rs  send_message.rs
relays/bin-substrate/src/cli/relay_headers_and_messages/: mod.rs
relays/client-aleph-parachain/: Cargo.toml
relays/client-aleph-parachain/src/: codegen_runtime.rs  lib.rs  runtime_codegen.rs
relays/client-aleph-zero/: Cargo.toml
relays/client-aleph-zero/src/: lib.rs  runtime_codegen.rs
relays/client-substrate/: Cargo.toml
relays/client-substrate/src/: chain.rs  lib.rs
relays/client-substrate/src/client/: caching.rs  client.rs  rpc.rs
relays/finality/src/: finality_loop.rs
relays/lib-substrate-relay/: Cargo.toml
relays/lib-substrate-relay/src/: error.rs
relays/lib-substrate-relay/src/finality/: engine.rs  source.rs  target.rs
scripts/: run_aleph_relayer.sh
