[package]
name = "relay-aleph-parachain-client"
version = "0.1.0"
authors = ["Cardinal Cryptography"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.5" }
scale-info = { version = "2.6.0", default-features = false, features = ["derive"] }
subxt = { version = "0.29.0", default-features = false, features = [] }

# Bridge dependencies

bp-bridge-hub-cumulus = { path = "../../primitives/chain-bridge-hub-cumulus" }
bp-header-chain = { path = "../../primitives/header-chain" }
bp-polkadot-core = { path = "../../primitives/polkadot-core" }

bridge-runtime-common = { path = "../../bin/runtime-common" }
relay-substrate-client = { path = "../client-substrate" }

bp-aleph-header-chain = { path = "../../primitives/aleph-header-chain" }
bp-aleph-parachain = { path = "../../primitives/chain-aleph-parachain" }

# Substrate Dependencies

sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-weights = { git = "https://github.com/paritytech/substrate", branch = "master" }
